[package]
name = "toloo-core"
version = "0.1.0"
edition = "2021"
description = "Toloo Protocol v0.2 — core types, crypto, and protocol definitions"

[lib]
name = "toloo_core"
path = "src/lib.rs"

[dependencies]
# Cryptography
ed25519-dalek    = { version = "2", features = ["rand_core", "zeroize"] }
x25519-dalek     = { version = "2", features = ["static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
argon2           = "0.5"
hkdf             = "0.12"
sha2             = "0.10"
rand             = "0.8"
zeroize          = { version = "1", features = ["derive"] }

# Encoding
base64ct  = { version = "1", features = ["alloc"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
hex       = "0.4"

# Error handling
thiserror = "1"
anyhow    = "1"
