[package]
name = "toloo-ffi"
version = "0.1.0"
edition = "2021"
description = "Toloo Protocol v0.2 — uniffi bindings for Android and iOS"

[lib]
name = "toloo_ffi"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
toloo-core = { path = "../toloo-core" }
toloo-lib  = { path = "../toloo-lib" }

uniffi    = "0.28"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow    = "1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
