[package]
name = "toloo-lib"
version = "0.1.0"
edition = "2021"
description = "Toloo Protocol v0.2 — stateful runtime (pool, transport, request handlers, discovery)"

[lib]
name = "toloo_lib"
path = "src/lib.rs"

[dependencies]
toloo-core = { path = "../toloo-core" }

# Async runtime and networking
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util      = "0.3"

# TLS (wss / https relay endpoints)
tokio-rustls = "0.26"
rustls        = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen         = "0.13"
sha2          = "0.10"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Encoding / serialization (re-used from core but needed directly)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow    = "1"

[dev-dependencies]
tokio      = { version = "1", features = ["full", "test-util"] }
hex        = "0.4"
serde_json = "1"
